# VillaJets2

./: .env  .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
crm/: __init__.py  admin.py  apps.py  factories.py  models.py  signals.py
crm/helpers/: doc_extract.py  strategies.py
crm/management/commands/: fetch_gmail.py
crm/migrations/: 0001_initial.py  0002_initial.py  0003_mail.py  0004_mailsettings_mail_client.py  0005_alter_client_created_at_alter_client_email_and_more.py  0006_rename_username_mail_sender.py  0007_alter_document_issued_country_alter_document_number.py  0008_rename_issued_country_document_document_country.py
crm/templates/admin/crm/: change_form.html  mail_settings_changelist.html
crm/templates/admin/crm/document/: change_form.html
crm/tests/: test_ocr.py  test_pipeline.py  test_visa_strategy.py
flights/: admin.py  factories.py  forms.py  models.py
flights/management/commands/: analyze_airports.py  build_airports_dict.py  create_clean_airports.py  import_airport_data.py  import_clean_airports.py  import_ourairports_data.py
flights/migrations/: 0002_flight_destination_flight_notes_flight_order_and_more.py  0003_airport_city_country_and_more.py  0004_alter_flightrequest_destination_airport_and_more.py  0005_update_airport_model.py  0006_alter_flightrequest_destination_city_and_more.py  0007_alter_flightrequest_options_and_more.py  0008_alter_flightrequest_destination_country_and_more.py  0009_airportsdatacache_and_more.py  0010_remove_flightrequest_destination_city_and_more.py  0011_remove_flightrequest_flights_fli_departu_c4bd67_idx_and_more.py
flights/static/js/: flight_leg_autofill.js
src/villajets/: .gitignore  manage.py  pyproject.toml
src/villajets/crm/: admin.py  factories.py  models.py
src/villajets/flights/: admin.py  models.py
src/villajets/flights/migrations/: 0001_initial.py
src/villajets/villajets/: settings.py  urls.py  wsgi.py
static/js/: flight_request_admin.js
villajets/: asgi.py  settings.py  urls.py
visa/: admin.py  models.py
visa/management/commands/: import_visa_rules.py
visa/migrations/: 0001_initial.py  0002_alter_visacheck_destination_country.py
